--- a/templates/main/dashboard.html
+++ b/templates/main/dashboard.html
@@ -3,15 +3,24 @@
 
 {% block content %}
 <style>
+
+  @font-face {
+    font-family: 'Pixelion';
+    src: url("/static/fonts/Pixelon-E4JEg.otf") format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
   body {
     background-color: #fff6e5;
+    
   }
 
   .dashboard-container {
     max-width: 1200px;
     margin: auto;
     padding: 30px 20px;
-    font-family: 'Segoe UI', sans-serif;
+    font-family: 'Pixelion', sans-serif;
     color: #4a444a;
   }
 
