--- a/templates/main/history.html
+++ b/templates/main/history.html
@@ -3,6 +3,15 @@
 
 {% block content %}
 <style>
+
+  @font-face {
+    font-family: 'Pixelion';
+    src: url("/static/fonts/Pixelon-E4JEg.otf") format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+
   .custom-history-page * {
     all: unset;
     all: revert-layer;
@@ -11,7 +20,6 @@
 
   .custom-history-page {
     background-color: #fff6e5 !important;
-    font-family: 'Segoe UI', sans-serif !important;
     padding: 40px 20px !important;
   }
 
