--- a/templates/main_base.html
+++ b/templates/main_base.html
@@ -71,7 +71,7 @@
           </a>
         </li>
         <li class="">
-          <a href="">
+          <a href="{% url 'quizzes' %}">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
