--- a/templates/main/courses/course_list.html
+++ b/templates/main/courses/course_list.html
@@ -9,7 +9,10 @@
     <a href="{% url 'create_course' %}" class="course-list-action-btn">Create Course</a>
     <a href="#" class="course-list-action-btn">Join Course</a>
   </div>
-
+<form method="get" action="{% url 'course_list' %}" class="search-bar">
+  <input type="text" name="q" placeholder="Search courses..." value="{{ search_query }}" class="search-input">
+  <button type="submit" class="search-button">Search</button>
+</form>
   <ul class="course-list-container">
     {% for course in courses %}
       <li class="course-list-item">
