--- a/templates/main_base.html
+++ b/templates/main_base.html
@@ -32,7 +32,7 @@
           </button>
           <span>
             <img
-              src="{% static 'images/QuizzongLogo.png' %}"
+              src="{% static 'images/QuizzongLogo1.png' %}"
               alt="Logo"
               class="img-fluid logo-main"
               style="max-width: 8rem" />
@@ -52,7 +52,7 @@
           </a>
         </li>
         <li class="">
-          <a href="">
+          <a href="{% url 'quizzes' %}">
               <img src="{% static 'images/Quizzes.gif' %}" alt="dada Icon" class="quiz-detail-icon">
             <span>Quizzes</span>
           </a>
