--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light px-5">
         <a class="navbar-brand" href="{% url 'landing' %}">
-            <img src="{% static 'images/QuizzongLogo.png' %}" alt="LOGO.png" style="width: 150px; height: 100px; border-radius: 10px;">
+            <img src="{% static 'images/QuizzongLogo1.png' %}" alt="LOGO.png" style="width: 150px; height: 100px; border-radius: 10px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
